Adding XML reader and writer