@@ -1,32 +1,33 @@
 package com.softuni.jsonexercise.services;
 
 import static com.softuni.jsonexercise.constant.JsonFiles.*;
+import static com.softuni.jsonexercise.constant.Utils.*;
 
 import java.io.FileReader;
 import java.io.IOException;
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Random;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.springframework.stereotype.Service;
 
-import static com.softuni.jsonexercise.constant.Utils.*;
-
-import com.softuni.jsonexercise.domain.dtos.categories.CategoryImportDto;
-import com.softuni.jsonexercise.domain.dtos.products.ProductImportDto;
-import com.softuni.jsonexercise.domain.dtos.users.UserImportDto;
+import com.softuni.jsonexercise.domain.dtos.categories.wrappers.CategoriesImportWrapperDto;
+import com.softuni.jsonexercise.domain.dtos.products.wrappers.ProductsImportWrapperDto;
+import com.softuni.jsonexercise.domain.dtos.users.wrappers.UsersImportWrapperDto;
 import com.softuni.jsonexercise.domain.entities.Category;
 import com.softuni.jsonexercise.domain.entities.Product;
 import com.softuni.jsonexercise.domain.entities.User;
 import com.softuni.jsonexercise.repositories.CategoryRepository;
 import com.softuni.jsonexercise.repositories.ProductRepository;
 import com.softuni.jsonexercise.repositories.UserRepository;
+
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Unmarshaller;
 
 @Service
 public class SeedServiceImpl implements SeedService {
@@ -42,12 +43,20 @@ public class SeedServiceImpl implements SeedService {
 	}
 
 	@Override
-	public void seedUsers() throws IOException {
+	public void seedUsers() throws IOException, JAXBException {
 		if (this.userRepository.count() == 0) {
-			final FileReader fileReader = new FileReader(USER_JSON);
+			final FileReader fileReader = new FileReader(USER_XML);
 
-			List<User> users = Arrays.stream(gson.fromJson(fileReader, UserImportDto[].class))
-					.map(userImportDto -> modelMapper.map(userImportDto, User.class)).collect(Collectors.toList());
+//			List<User> users = Arrays.stream(gson.fromJson(fileReader, UserImportDto[].class))
+//					.map(userImportDto -> modelMapper.map(userImportDto, User.class)).collect(Collectors.toList());
+
+			final JAXBContext context = JAXBContext.newInstance(UsersImportWrapperDto.class);
+			final Unmarshaller unmarshaller = context.createUnmarshaller();
+
+			final UsersImportWrapperDto usersDto = (UsersImportWrapperDto) unmarshaller.unmarshal(fileReader);
+
+			final List<User> users = usersDto.getUsers().stream().map(userDto -> modelMapper.map(userDto, User.class))
+					.toList();
 
 			this.userRepository.saveAllAndFlush(users);
 
@@ -57,28 +66,48 @@ public class SeedServiceImpl implements SeedService {
 	}
 
 	@Override
-	public void seedCategories() throws IOException {
+	public void seedCategories() throws IOException, JAXBException {
 		if (this.categorieRepository.count() == 0) {
-			FileReader reader = new FileReader(CATEGORY_JSON);
+			FileReader reader = new FileReader(CATEGORY_XML);
+//
+//			List<Category> catrgories = Arrays.stream(gson.fromJson(reader, CategoryImportDto[].class))
+//					.map(category -> modelMapper.map(category, Category.class)).collect(Collectors.toList());
+//
+			final JAXBContext context = JAXBContext.newInstance(CategoriesImportWrapperDto.class);
+			final Unmarshaller unmarshaller = context.createUnmarshaller();
 
-			List<Category> products = Arrays.stream(gson.fromJson(reader, CategoryImportDto[].class))
-					.map(category -> modelMapper.map(category, Category.class)).collect(Collectors.toList());
+			CategoriesImportWrapperDto categoriesDto = (CategoriesImportWrapperDto) unmarshaller.unmarshal(reader);
 
-			this.categorieRepository.saveAllAndFlush(products);
+			List<Category> categories = categoriesDto.getCategories().stream()
+					.map(category -> modelMapper.map(category, Category.class)).toList();
+
+			this.categorieRepository.saveAllAndFlush(categories);
 
 			reader.close();
 		}
 	}
 
 	@Override
-	public void seedProducts() throws IOException {
+	public void seedProducts() throws IOException, JAXBException {
 		if (this.productRepository.count() == 0) {
-			FileReader reader = new FileReader(PRODUCT_JSON);
+			FileReader reader = new FileReader(PRODUCT_XML);
+//
+//			List<Product> products = Arrays.stream(gson.fromJson(reader, ProductImportDto[].class))
+//					.map(product -> modelMapper.map(product, Product.class)).map(this::setRandomSeller)
+//					.map(this::setRandomBuyer).map(this::setRandomCategory).collect(Collectors.toList());
+			final JAXBContext context = JAXBContext.newInstance(ProductsImportWrapperDto.class);
+			final Unmarshaller unmarshaller = context.createUnmarshaller();
 
-			List<Product> products = Arrays.stream(gson.fromJson(reader, ProductImportDto[].class))
-					.map(product -> modelMapper.map(product, Product.class)).map(this::setRandomSeller)
-					.map(this::setRandomBuyer).map(this::setRandomCategory).collect(Collectors.toList());
+			final ProductsImportWrapperDto dto = (ProductsImportWrapperDto) unmarshaller.unmarshal(reader);
 
+			final List<Product> products=	dto.getProducts()
+				.stream()
+				.map(productDto -> modelMapper.map(productDto, Product.class))
+				.map(this::setRandomSeller)
+				.map(this::setRandomBuyer)
+				.map(this::setRandomCategory)
+				.toList();
+			
 			this.productRepository.saveAllAndFlush(products);
 
 			reader.close();
